Fix badge text being nearly invisible and more

--- a/application/modules/user/static/css/user.css
+++ b/application/modules/user/static/css/user.css
@@ -388,14 +388,14 @@ li.mjs-nestedSortable-collapsed.mjs-nestedSortable-hovering div {
     transition: margin-left 0.5s;
 }
 
-.profile-sidebar.active > .profile-userpic{
+.profile-sidebar.active > .profile-userpic {
     height: 0;
     -webkit-transition: height 0.8s;
     -moz-transition: height 0.8s;
     transition: height 0.8s;
 }
 
-.profile-sidebar > .profile-userpic{
+.profile-sidebar > .profile-userpic {
     height: 80px;
     -webkit-transition: height 0.8s;
     -moz-transition: height 0.8s;
@@ -508,30 +508,13 @@ li.mjs-nestedSortable-collapsed.mjs-nestedSortable-hovering div {
     color: #000;
 }
 div.input-group.filter {
+    top: -3px;
     width: 300px;
-    float: right;
+    padding-bottom: 4px;
+    border-bottom: 1px solid #e5e5e5;
 }
 div.input-group.filter input:not(:placeholder-shown) {
     font-weight: bold;
     color: #a94442;
     background: #f2dede;
-}
-
-.full-width-container {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.nav-tabs.full-width {
-    border-bottom: 1px solid #ddd;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    display: block;
-    box-sizing: border-box;
-}
-
-.nav-tabs .nav-link {
-    width: 100px;
 }
